--- a/style.css
+++ b/style.css
@@ -1,10 +1,13 @@
-/* # ***** BEGIN LICENSE BLOCK *****
-#
-#  	Demo#1
-#  	Theme by Azork (http://xtradotfreedotfr.free.fr/blog/) and Pierre Van Glabeke
-#   License : public domain
-#
-# ***** END LICENSE BLOCK ***** */
+/**
+ * @brief Demo#1, a theme for Dotclear 2
+ *
+ * @package Dotclear
+ * @subpackage Theme
+ *
+ * @author Azork (http://xtradotfreedotfr.free.fr/blog/), Pierre Van Glabeke
+ *
+ * @copyright public domain
+ */
 body {
 	margin: 0;
 	padding: 0;
